--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       class="embeddable-buttondown-form"
     >
       <input type="email" name="email" id="bd-email" placeholder="Join the email list" />
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Confirm" />
     </form>
   </div>
 </div>
