--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -31,8 +31,35 @@
 
   
     <section>
+      <h2><a href="/glossary/gps/">GPS</a></h2>
+      <p><strong>GPS</strong> (Global Positioning System) - A satellite-based navigation system that provides location and time information anywhere on Earth. <a href="/glossary/zac">ZAC</a> uses GPS combined with offline maps to enable navigation without internet connectivity—satellites don&rsquo;t care if civilization has collapsed.</p>
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/llm/">Local LLM</a></h2>
+      <p><strong>Local LLM</strong> (Large Language Model) - An AI system that runs entirely on-device, requiring no internet connection. <a href="/glossary/zac">ZAC</a> uses a local LLM to answer questions, assist with survival scenarios, and provide information from its offline knowledge base—all without phoning home to the cloud.</p>
+    </section>
+  
+    <section>
       <h2><a href="/glossary/lora/">LoRa</a></h2>
-      <p><strong>LoRa</strong> (Long Range) - A low-power, long-range radio communication protocol ideal for off-grid messaging. <a href="/glossary/zac">ZAC</a> uses LoRa via Meshtastic-compatible devices to form mesh networks that can relay messages across kilometers without cellular or internet infrastructure.</p>
+      <p><strong>LoRa</strong> (Long Range) - A low-power, long-range radio communication protocol ideal for off-grid messaging. <a href="/glossary/zac">ZAC</a> uses LoRa via <a href="/glossary/meshtastic">Meshtastic</a>-compatible devices to form mesh networks that can relay messages across kilometers without cellular or internet infrastructure.</p>
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/meshtastic/">Meshtastic</a></h2>
+      <p><strong>Meshtastic</strong> - An open-source mesh networking project that runs on <a href="/glossary/lora">LoRa</a> radio hardware. Enables off-grid text messaging, GPS location sharing, and telemetry between devices over distances of several kilometers. <a href="/glossary/zac">ZAC</a> communicates with any Meshtastic-compatible device, creating decentralized communication networks that don&rsquo;t rely on cell towers or internet.</p>
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/pelican/">Pelican</a></h2>
+      <p><strong>Pelican</strong> - A brand of rugged, watertight, crushproof protective cases originally designed for sensitive equipment. <a href="/glossary/zac">ZAC</a> lives inside a Pelican case to ensure survival in harsh conditions—dust, water, impact, and the general chaos of civilization&rsquo;s end.</p>
+<img src="pelican_1450.png" alt="Pelican Case" style="width: 200px;">
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/raspberry-pi/">Raspberry Pi</a></h2>
+      <p><strong>Raspberry Pi</strong> - A low-cost, credit card-sized single-board computer developed by the Raspberry Pi Foundation. <a href="/glossary/zac">ZAC</a> is built around the Raspberry Pi 5, chosen for its balance of performance, power efficiency, and widespread availability of replacement parts.</p>
+<img src="raspberry_pi.png" alt="Raspberry Pi" style="width: 200px;">
     </section>
   
     <section>
