--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -68,6 +68,16 @@
     </section>
   
     <section>
+      <h2><a href="/glossary/usb/">USB</a></h2>
+      <p><strong>USB</strong> (Universal Serial Bus) - A standard connector for peripherals and data transfer. <a href="/glossary/zac">ZAC</a> uses USB ports to connect sensor modules, <a href="/glossary/sdr">SDR</a> dongles, storage devices, and other expansion hardware—keeping the system modular and field-serviceable.</p>
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/wikipedia/">Wikipedia</a></h2>
+      <p><strong>Wikipedia</strong> - A free, collaborative online encyclopedia. <a href="/glossary/zac">ZAC</a> carries a compressed offline copy of Wikipedia, providing access to millions of articles without internet connectivity—because knowledge shouldn&rsquo;t require a working cell tower.</p>
+    </section>
+  
+    <section>
       <h2><a href="/glossary/zac/">ZAC</a></h2>
       <p><strong>ZAC</strong> (Zombie Apocalypse Computer) - A resilient, off-grid computing system designed to survive and operate during catastrophic infrastructure collapse. Built with longevity, repairability, and energy independence as core principles.</p>
     </section>
@@ -79,7 +89,7 @@
   
     <section>
       <h2><a href="/glossary/zacos/">ZACOS</a></h2>
-      <p><strong>ZACOS</strong> (ZAC Operating System) - The custom operating system that powers <a href="/glossary/zac">ZAC</a>. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
+      <p><strong>ZACOS</strong> (ZAC Operating System) - The open-source application that powers <a href="/glossary/zac">ZAC</a>. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
     </section>
   
 
