--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -31,6 +31,11 @@
 
   
     <section>
+      <h2><a href="/glossary/zombie/">Zombie</a></h2>
+      <p><strong>Zombie</strong>  - Not just a monster with a rotten face, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit.</p>
+    </section>
+  
+    <section>
       <h2><a href="/glossary/gps/">GPS</a></h2>
       <p><strong>GPS</strong> (Global Positioning System) - A satellite-based navigation system that provides location and time information anywhere on Earth. <a href="/glossary/zac">ZAC</a> uses GPS combined with offline maps to enable navigation without internet connectivity—satellites don&rsquo;t care if civilization has collapsed.</p>
     </section>
