--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -32,7 +32,7 @@
   
     <section>
       <h2><a href="/glossary/zombie/">Zombie</a></h2>
-      <p><strong>Zombie</strong>  - Not only a monster with a rotten face, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit.</p>
+      <p><strong>Zombie</strong>  - Not merely the walking dead, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit.</p>
     </section>
   
     <section>
