--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -32,7 +32,7 @@
   
     <section>
       <h2><a href="/glossary/zombie/">Zombie</a></h2>
-      <p><strong>Zombie</strong>  - Not merely the walking dead, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit.</p>
+      <p><strong>Zombie</strong>  - Not merely the walking dead, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit. That’s why I still build things. Especially now. The things I create remind me of the world we lost, but also the world as it could be again. Just because everything has gone to hell in a handbasket, doesn’t mean we have to give in to the bastards. Don’t ever give in, kid.</p>
     </section>
   
     <section>
