--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-theme="silver" lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=52041&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Glossary | Zombie Apocalypse Tech</title>
@@ -32,17 +32,24 @@
   
     <section>
       <h2><a href="/glossary/zombie/">Zombie</a></h2>
-      <p><strong>Zombie</strong>  - Not merely the walking dead, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit. That’s why I still build things. Especially now. The things I create remind me of the world we lost, but also the world as it could be again. Just because everything has gone to hell in a handbasket, doesn’t mean we have to give in to the bastards. Don’t ever give in, kid.</p>
+      <p><strong>Zombie</strong>  - Not merely the walking dead, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit.</p>
+<p>See also, (<a href="/glossary/turning">The Turning</a>.</p>
+<p>Note from the Old Man: That’s why I still build things. Especially now. The things I create remind me of the world we lost, but also the world as it could be again. Just because everything has gone to hell in a handbasket, doesn’t mean we have to give in to the bastards. Don’t ever give in, kid.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/gps/">GPS</a></h2>
-      <p><strong>GPS</strong> (Global Positioning System) - A satellite-based navigation system that provides location and time information anywhere on Earth. <a href="/glossary/zac">ZAC</a> uses GPS combined with offline maps to enable navigation without internet connectivity—satellites don&rsquo;t care if civilization has collapsed.</p>
+      <p><strong>GPS</strong> (Global Positioning System) - A satellite-based navigation system that provides location and time information anywhere on Earth. <a href="/glossary/zac">ZAC</a> uses GPS combined with offline maps to enable navigation without internet connectivity.</p>
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/lazarus-internet-archive/">Lazarus Internet Archive</a></h2>
+      <p><strong>Lazarus Internet Archive (LIA)</strong> — A distributed network preserving a snapshot of the internet from before the <a href="/glossary/turning">turning</a>. Maintained by <a href="/glossary/lazarus-collective">The Lazarus Collective</a>, LIA is available through both official and unofficial mirrors throughout the world. Once connected, you can access canonical urls through your browser of choice.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/llm/">Local LLM</a></h2>
-      <p><strong>Local LLM</strong> (Large Language Model) - An AI system that runs entirely on-device, requiring no internet connection. <a href="/glossary/zac">ZAC</a> uses a local LLM to answer questions, assist with survival scenarios, and provide information from its offline knowledge base—all without phoning home to the cloud.</p>
+      <p><strong>Local LLM</strong> (Large Language Model) - An AI system that runs entirely on-device, requiring no internet connection. <a href="/glossary/zac">ZAC</a> uses a local LLM to answer questions, assist with survival scenarios, and provide information from its offline knowledge base.</p>
     </section>
   
     <section>
@@ -73,6 +80,16 @@
     </section>
   
     <section>
+      <h2><a href="/glossary/lazarus-collective/">The Lazarus Collective</a></h2>
+      <p><strong>The Lazarus Collective</strong> — An organization based in Toronto, Canada, whose goal is to restore useful tools and technology from the old world. They maintain LIA, the <a href="/glossary/lazarus-internet-archive">Lazarus Internet Archive</a>.</p>
+    </section>
+  
+    <section>
+      <h2><a href="/glossary/turning/">The Turning</a></h2>
+      <p><strong>The Turning</strong> - Refers to the worldwide phenomena of human beings changing into something not quite human. This ongoing transformation has been responsible for the utter collapse of social infrastructure. To date, there is no real understanding for the cause of this phenomenon, though many are working to discover a cure.</p>
+    </section>
+  
+    <section>
       <h2><a href="/glossary/usb/">USB</a></h2>
       <p><strong>USB</strong> (Universal Serial Bus) - A standard connector for peripherals and data transfer. <a href="/glossary/zac">ZAC</a> uses USB ports to connect sensor modules, <a href="/glossary/sdr">SDR</a> dongles, storage devices, and other expansion hardware—keeping the system modular and field-serviceable.</p>
     </section>
@@ -84,17 +101,18 @@
   
     <section>
       <h2><a href="/glossary/zac/">ZAC</a></h2>
-      <p><strong>ZAC</strong> (Zombie Apocalypse Computer) - A resilient, off-grid computing system designed to survive and operate during catastrophic infrastructure collapse. Built with longevity, repairability, and energy independence as core principles.</p>
+      <p><strong>ZAC</strong> (Zombie Apocalypse Computer aka Zero-Infrastructure Autonomous Computer) - A resilient, off-grid computing system designed to survive and operate during catastrophic infrastructure collapse. Built with longevity, repairability, and energy independence as core principles.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/zaclog/">ZACLOG</a></h2>
-      <p><strong>ZACLOG</strong> - The build series documenting the <a href="/glossary/zac">ZAC</a> project from concept to field-ready system. Each entry covers a specific aspect of the build: hardware assembly, software configuration, testing, and deployment. Follow along via the <a href="/tags/zaclog">#zaclog</a> tag.</p>
+      <p><strong>ZACLOG</strong> - The build series documenting the <a href="/glossary/zac">ZAC</a> project from concept to field-ready system. Each entry covers a specific aspect of the build: hardware assembly, software configuration, testing, and deployment.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/zacos/">ZACOS</a></h2>
       <p><strong>ZACOS</strong> (ZAC Operating System) - The open-source application that powers <a href="/glossary/zac">ZAC</a>. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
+<p>Note from the Old Man: The setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> for certain software packages, though we are working on a way to distribute these files through local mesh networks. Please email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> if you are unable to access LIA mirrors, and we will find a way to get these files to you.</p>
     </section>
   
 
