--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <h2><a href="/blog/zaclog-000/">ZACLOG/000 - The Zombie Apocalypse Computer</a></h2>
       <div class="card-summary"><p>Or, the <strong>Zero-Infrastructure Autonomous Computer</strong>, if you prefer.</p>
 <p><a href="/glossary/zac">ZAC</a> is a self-contained, open-source survival computer designed to function completely off-grid.</p>
-<p>Built around a <a href="/glossary/raspberry-pi">Raspberry Pi</a> architecture, ZAC lives in a weatherproof <a href="/glossary/pelican">Pelican</a> case. Solar and battery powered. No internet required. No cloud dependencies. No subscriptions. A standalone, civilization-in-a-box machine, constructed to outlast the <a href="/glossary/zombie">zombie</a> apocalypse.</p></div>
+<p>Built around a <a href="/glossary/raspberry-pi">Raspberry Pi</a> architecture, ZAC lives in a weatherproof <a href="/glossary/pelican">Pelican</a> case. Solar and battery powered. No internet required. No cloud dependencies. No subscriptions. A standalone, civilization-in-a-box machine, constructed to outlast the zombie apocalypse.</p></div>
       <a href="/blog/zaclog-000/" class="read-more">Read more →</a>
     </article>
   
