--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-theme="silver" lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=52041&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Glossary | Zombie Apocalypse Tech</title>
@@ -32,9 +32,7 @@
   
     <section>
       <h2><a href="/glossary/zombie/">Zombie</a></h2>
-      <p><strong>Zombie</strong>  - Not merely the walking dead, a zombie is any force destructive to our world. Eater of the planet, the body, the mind, and the spirit.</p>
-<p>See also, (<a href="/glossary/turning">The Turning</a>.</p>
-<p>Note from the Old Man: That’s why I still build things. Especially now. The things I create remind me of the world we lost, but also the world as it could be again. Just because everything has gone to hell in a handbasket, doesn’t mean we have to give in to the bastards. Don’t ever give in, kid.</p>
+      <p><strong>Zombie</strong>  - A human that has become something not quite human. Their behavior is erratic and unpredictable, to a harmful degree. They retain memories and knowledge from their former lives, but nothing seems connected, nor has any meaning to them. A typical zombie follows the same routine as they did in life, but it&rsquo;s all jumbled and wrong. Despite what popular media has shown, a zombie is not constantly hungry, but when they do need to feed, they have no understanding of nourishment. Consequently, they&rsquo;ll eat anything and everything in sight. That includes you. See also, <a href="/glossary/turning">The Turning</a>.</p>
     </section>
   
     <section>
@@ -44,7 +42,7 @@
   
     <section>
       <h2><a href="/glossary/lazarus-internet-archive/">Lazarus Internet Archive</a></h2>
-      <p><strong>Lazarus Internet Archive (LIA)</strong> — A distributed network preserving a snapshot of the internet from before the <a href="/glossary/turning">turning</a>. Maintained by <a href="/glossary/lazarus-collective">The Lazarus Collective</a>, LIA is available through both official and unofficial mirrors throughout the world. Once connected, you can access canonical urls through your browser of choice.</p>
+      <p><strong>Lazarus Internet Archive (LIA)</strong> — A distributed network preserving a snapshot of the internet from before <a href="/glossary/turning">The Turning</a>. Maintained by <a href="/glossary/lazarus-collective">The Lazarus Collective</a>, LIA is available through both official and unofficial mirrors throughout the world. Once connected, you can access canonical urls through your browser of choice.</p>
     </section>
   
     <section>
@@ -81,12 +79,12 @@
   
     <section>
       <h2><a href="/glossary/lazarus-collective/">The Lazarus Collective</a></h2>
-      <p><strong>The Lazarus Collective</strong> — An organization based in Toronto, Canada, whose goal is to restore useful tools and technology from the old world. They maintain LIA, the <a href="/glossary/lazarus-internet-archive">Lazarus Internet Archive</a>.</p>
+      <p><strong>The Lazarus Collective</strong> — An organization based in Columbus, Ohio, whose goal is to restore useful tools and technology from the old world. They maintain LIA, the <a href="/glossary/lazarus-internet-archive">Lazarus Internet Archive</a>.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/turning/">The Turning</a></h2>
-      <p><strong>The Turning</strong> - Refers to the worldwide phenomena of human beings changing into something not quite human. This ongoing transformation has been responsible for the utter collapse of social infrastructure. To date, there is no real understanding for the cause of this phenomenon, though many are working to discover a cure.</p>
+      <p><strong>The Turning</strong> - Refers to the worldwide phenomena of human beings changing into something not quite human. This ongoing transformation has been responsible for the utter collapse of the social infrastructure. To date, there is no real understanding for the root cause of this phenomenon, though many are working to discover a cure. See also, <a href="/glossary/zombie">Zombie</a>.</p>
     </section>
   
     <section>
@@ -102,6 +100,7 @@
     <section>
       <h2><a href="/glossary/zac/">ZAC</a></h2>
       <p><strong>ZAC</strong> (Zombie Apocalypse Computer aka Zero-Infrastructure Autonomous Computer) - A resilient, off-grid computing system designed to survive and operate during catastrophic infrastructure collapse. Built with longevity, repairability, and energy independence as core principles.</p>
+<p>ZAC runs <a href="/glossary/zacos">ZACOS</a>.</p>
     </section>
   
     <section>
@@ -112,7 +111,7 @@
     <section>
       <h2><a href="/glossary/zacos/">ZACOS</a></h2>
       <p><strong>ZACOS</strong> (ZAC Operating System) - The open-source application that powers <a href="/glossary/zac">ZAC</a>. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
-<p>Note from the Old Man: The setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> for certain software packages, though we are working on a way to distribute these files through local mesh networks. Please email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> if you are unable to access LIA mirrors, and we will find a way to get these files to you.</p>
+<p>Note from the Old Man: The setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> for certain software packages, though we are working on a way to distribute these files through local mesh networks. If you are unable to access LIA mirrors, or equivalent internet archives, please email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> and we will find a way to get the necessary files to you.</p>
     </section>
   
 
