--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -32,7 +32,7 @@
   
     <section>
       <h2><a href="/glossary/zombie/">Zombie</a></h2>
-      <p><strong>Zombie</strong>  - A human that has become something not quite human. Their behavior is erratic and unpredictable, to a harmful degree. They retain memories and knowledge from their former lives, but nothing seems connected, nor has any meaning to them. A typical zombie follows the same routine as they did in life, but it&rsquo;s all jumbled and wrong. Despite what popular media has shown, a zombie is not constantly hungry, but when they do need to feed, they have no understanding of nourishment. Consequently, they&rsquo;ll eat anything and everything in sight. That includes you. See also, <a href="/glossary/turning">The Turning</a>.</p>
+      <p><strong>Zombie</strong>  - A human who has become something not quite human. The zombie&rsquo;s behavior is erratic to a harmful degree. It retains memories and knowledge from its former life, but no connections. Nothing means anything. It follows the same routine as it did in life, but everything is jumbled and wrong somehow. Despite what popular media has suggested, a zombie is not always hungry, but when so, it seems to have no comprehension of food. It will consume anything and everything in sight. That includes other zombies. And you. Because of this, a zombie more often than not succumbs to starvation eventually, though increasingly ravenous to the end.</p>
     </section>
   
     <section>
@@ -62,7 +62,7 @@
   
     <section>
       <h2><a href="/glossary/pelican/">Pelican</a></h2>
-      <p><strong>Pelican</strong> - A brand of rugged, watertight, crushproof protective cases originally designed for sensitive equipment. <a href="/glossary/zac">ZAC</a> lives inside a Pelican case to ensure survival in harsh conditions—dust, water, impact, and the general chaos of civilization&rsquo;s end.</p>
+      <p><strong>Pelican</strong> - A brand of rugged, watertight, crushproof protective cases originally designed for sensitive equipment. <a href="/glossary/zac">ZAC</a> lives inside a Pelican case to ensure survival in harsh conditions—dust, water, and impact.</p>
 <img src="pelican_1450.png" alt="Pelican Case" style="width: 200px;">
     </section>
   
@@ -84,7 +84,8 @@
   
     <section>
       <h2><a href="/glossary/turning/">The Turning</a></h2>
-      <p><strong>The Turning</strong> - Refers to the worldwide phenomena of human beings changing into something not quite human. This ongoing transformation has been responsible for the utter collapse of the social infrastructure. To date, there is no real understanding for the root cause of this phenomenon, though many are working to discover a cure. See also, <a href="/glossary/zombie">Zombie</a>.</p>
+      <p><strong>The Turning</strong> - The worldwide phenomenon of human beings changing into something not quite human. This ongoing transformation has collapsed the social order. The root cause remains unknown, though research outposts continue working toward a cure.</p>
+<p>See also, <a href="/glossary/zombie">Zombie</a>.</p>
     </section>
   
     <section>
@@ -94,7 +95,7 @@
   
     <section>
       <h2><a href="/glossary/wikipedia/">Wikipedia</a></h2>
-      <p><strong>Wikipedia</strong> - A free, collaborative online encyclopedia. <a href="/glossary/zac">ZAC</a> carries a compressed offline copy of Wikipedia, providing access to millions of articles without internet connectivity—because knowledge shouldn&rsquo;t require a working cell tower.</p>
+      <p><strong>Wikipedia</strong> - A free, collaborative online encyclopedia. <a href="/glossary/zac">ZAC</a> carries a compressed offline copy of Wikipedia, providing access to millions of articles without internet connectivity.</p>
     </section>
   
     <section>
@@ -111,7 +112,7 @@
     <section>
       <h2><a href="/glossary/zacos/">ZACOS</a></h2>
       <p><strong>ZACOS</strong> (ZAC Operating System) - The open-source application that powers <a href="/glossary/zac">ZAC</a>. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
-<p>Note from the Old Man: The setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> for certain software packages, though we are working on a way to distribute these files through local mesh networks. If you are unable to access LIA mirrors, or equivalent internet archives, please email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> and we will find a way to get the necessary files to you.</p>
+<p>Old Man: The ZACOS setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> to download software packages. Knowing this is not ideal for fully-autonomous bootstrapping, we have been working on ways to distribute these files with ZACOS itself. In the meantime, if you are unable to access LIA mirrors, email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> and we&rsquo;ll find a way to get the setup packages to you.</p>
     </section>
   
 
