--- a/public/journal/index.html
+++ b/public/journal/index.html
@@ -31,9 +31,9 @@
 
   
     <section>
-      <h2><a href="/journal/micro-center-at-crescent-hills/">The Micro Center at Crescent Hills</a></h2>
+      <h2><a href="/journal/the-micro-center-at-crescent-hills/">The Micro Center at Crescent Hills</a></h2>
       <p>Jan 12</p>
-<p>If you&rsquo;re near a city, Micro Centers are good places to find computer parts. I&rsquo;ve been eyeing this place on RR patrols for awhile. Looks to have been totally abandoned. No signs of vandalism or destruction. Here I was able to acquire a Raspberry Pi 5, monitor, keyboard, and a 32GB micro SD card.</p>
+<p>If you&rsquo;re near a city, Micro Centers are good places to find computer parts. I&rsquo;ve been eyeing this place on RR patrols for a while. Tucked back in the Crescent Hills shopping center off Highway 57. Looks to have been totally forgotten. No signs of vandalism or destruction. Full inventory. Here I was able to acquire a Raspberry Pi 5, monitor, keyboard, and a 32GB microSD card. All brand new.</p>
     </section>
   
 
