--- a/public/glossary/index.html
+++ b/public/glossary/index.html
@@ -32,87 +32,96 @@
   
     <section>
       <h2><a href="/glossary/zombie/">Zombie</a></h2>
-      <p><strong>Zombie</strong>  - A human who has become something not quite human. The zombie&rsquo;s behavior is erratic to a harmful degree. It retains memories and knowledge from its former life, but no connections. Nothing means anything. It follows the same routine as it did in life, but everything is jumbled and wrong somehow. Despite what popular media has suggested, a zombie is not always hungry, but when so, it seems to have no comprehension of food. It will consume anything and everything in sight. That includes other zombies. And you. Because of this, a zombie more often than not succumbs to starvation eventually, though increasingly ravenous to the end.</p>
+      <p>A human who has become something not quite human.</p>
+<p>The zombie&rsquo;s behavior is erratic to a harmful degree, retaining knowledge and memories from before the turn, but disconnected. It generally follows the same routine as it did in life, but its actions have been described as &ldquo;jumbled and wrong somehow&rdquo;. Absurd.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/gps/">GPS</a></h2>
-      <p><strong>GPS</strong> (Global Positioning System) - A satellite-based navigation system that provides location and time information anywhere on Earth. <a href="/glossary/zac">ZAC</a> uses GPS combined with offline maps to enable navigation without internet connectivity.</p>
+      <p>Global Positioning System</p>
+<p>A satellite-based navigation system that provides location and time information anywhere on Earth. <a href="/glossary/zac">ZAC</a> uses GPS combined with offline maps to enable navigation without internet connectivity.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/lazarus-internet-archive/">Lazarus Internet Archive</a></h2>
-      <p><strong>Lazarus Internet Archive (LIA)</strong> — A distributed network preserving a snapshot of the internet from before <a href="/glossary/turning">The Turning</a>. Maintained by <a href="/glossary/lazarus-collective">The Lazarus Collective</a>, LIA is available through both official and unofficial mirrors throughout the world. Once connected, you can access canonical urls through your browser of choice.</p>
+      <p>LIA</p>
+<p>A distributed network preserving a snapshot of the internet from before <a href="/glossary/turning">The Turning</a>. Maintained by <a href="/glossary/lazarus-collective">The Lazarus Collective</a>, LIA is available through both official and unofficial mirrors throughout the world. Once connected, you can access canonical urls through your browser of choice.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/llm/">Local LLM</a></h2>
-      <p><strong>Local LLM</strong> (Large Language Model) - An AI system that runs entirely on-device, requiring no internet connection. <a href="/glossary/zac">ZAC</a> uses a local LLM to answer questions, assist with survival scenarios, and provide information from its offline knowledge base.</p>
+      <p>Large Language Model</p>
+<p>An AI system that runs entirely on-device, requiring no internet connection. <a href="/glossary/zac">ZAC</a> uses a local LLM to answer questions, assist with survival scenarios, and provide information from its offline knowledge base.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/lora/">LoRa</a></h2>
-      <p><strong>LoRa</strong> (Long Range) - A low-power, long-range radio communication protocol ideal for off-grid messaging. <a href="/glossary/zac">ZAC</a> uses LoRa via <a href="/glossary/meshtastic">Meshtastic</a>-compatible devices to form mesh networks that can relay messages across kilometers without cellular or internet infrastructure.</p>
+      <p>Long Range</p>
+<p>A low-power, long-range radio communication protocol ideal for off-grid messaging. <a href="/glossary/zac">ZAC</a> uses LoRa via <a href="/glossary/meshtastic">Meshtastic</a>-compatible devices to form mesh networks that can relay messages across kilometers without cellular or internet infrastructure.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/meshtastic/">Meshtastic</a></h2>
-      <p><strong>Meshtastic</strong> - An open-source mesh networking project that runs on <a href="/glossary/lora">LoRa</a> radio hardware. Enables off-grid text messaging, GPS location sharing, and telemetry between devices over distances of several kilometers. <a href="/glossary/zac">ZAC</a> communicates with any Meshtastic-compatible device, creating decentralized communication networks that don&rsquo;t rely on cell towers or internet.</p>
+      <p>An open-source mesh networking project that runs on <a href="/glossary/lora">LoRa</a> radio hardware. Enables off-grid text messaging, GPS location sharing, and telemetry between devices over distances of several kilometers. <a href="/glossary/zac">ZAC</a> communicates with any Meshtastic-compatible device, creating decentralized communication networks that don&rsquo;t rely on cell towers or internet.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/pelican/">Pelican</a></h2>
-      <p><strong>Pelican</strong> - A brand of rugged, watertight, crushproof protective cases originally designed for sensitive equipment. <a href="/glossary/zac">ZAC</a> lives inside a Pelican case to ensure survival in harsh conditions—dust, water, and impact.</p>
+      <p>A brand of rugged, watertight, crushproof protective cases originally designed for sensitive equipment. <a href="/glossary/zac">ZAC</a> lives inside a Pelican case to ensure survival in harsh conditions—dust, water, and impact.</p>
 <img src="pelican_1450.png" alt="Pelican Case" style="width: 200px;">
     </section>
   
     <section>
       <h2><a href="/glossary/raspberry-pi/">Raspberry Pi</a></h2>
-      <p><strong>Raspberry Pi</strong> - A low-cost, credit card-sized single-board computer developed by the Raspberry Pi Foundation. <a href="/glossary/zac">ZAC</a> is built around the Raspberry Pi 5, chosen for its balance of performance, power efficiency, and widespread availability of replacement parts.</p>
+      <p>A low-cost, credit card-sized single-board computer developed by the Raspberry Pi Foundation. <a href="/glossary/zac">ZAC</a> is built around the Raspberry Pi 5, chosen for its balance of performance, power efficiency, and widespread availability of replacement parts.</p>
 <img src="raspberry_pi.png" alt="Raspberry Pi" style="width: 200px;">
     </section>
   
     <section>
       <h2><a href="/glossary/sdr/">SDR</a></h2>
-      <p><strong>SDR</strong> (Software Defined Radio) - A radio receiver where signal processing is handled by software rather than dedicated hardware. Allows <a href="/glossary/zac">ZAC</a> to monitor aircraft transponders (ADS-B), decode weather satellite imagery, and receive emergency broadcasts using a single USB dongle.</p>
+      <p>Software Defined Radio</p>
+<p>A radio receiver where signal processing is handled by software rather than dedicated hardware. Allows <a href="/glossary/zac">ZAC</a> to monitor aircraft transponders (ADS-B), decode weather satellite imagery, and receive emergency broadcasts using a single USB dongle.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/lazarus-collective/">The Lazarus Collective</a></h2>
-      <p><strong>The Lazarus Collective</strong> — An organization based in Columbus, Ohio, whose goal is to restore useful tools and technology from the old world. They maintain LIA, the <a href="/glossary/lazarus-internet-archive">Lazarus Internet Archive</a>.</p>
+      <p>An organization based in Asheville, North Carolina, whose goal is to restore useful tools and technology from the old world. They maintain LIA, the <a href="/glossary/lazarus-internet-archive">Lazarus Internet Archive</a>.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/turning/">The Turning</a></h2>
-      <p><strong>The Turning</strong> - The worldwide phenomenon of human beings changing into something not quite human. This ongoing transformation has collapsed the social order. The root cause remains unknown, though research outposts continue working toward a cure.</p>
+      <p>The worldwide phenomenon of human beings changing into something not quite human. This ongoing transformation has collapsed the social order. The root cause remains unknown, though scientists throughout the world continue to seek a cure.</p>
 <p>See also, <a href="/glossary/zombie">Zombie</a>.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/usb/">USB</a></h2>
-      <p><strong>USB</strong> (Universal Serial Bus) - A standard connector for peripherals and data transfer. <a href="/glossary/zac">ZAC</a> uses USB ports to connect sensor modules, <a href="/glossary/sdr">SDR</a> dongles, storage devices, and other expansion hardware—keeping the system modular and field-serviceable.</p>
+      <p>Universal Serial Bus</p>
+<p>A standard connector for peripherals and data transfer. <a href="/glossary/zac">ZAC</a> uses USB ports to connect sensor modules, <a href="/glossary/sdr">SDR</a> dongles, storage devices, and other expansion hardware—keeping the system modular and field-serviceable.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/wikipedia/">Wikipedia</a></h2>
-      <p><strong>Wikipedia</strong> - A free, collaborative online encyclopedia. <a href="/glossary/zac">ZAC</a> carries a compressed offline copy of Wikipedia, providing access to millions of articles without internet connectivity.</p>
+      <p>A free, collaborative online encyclopedia. <a href="/glossary/zac">ZAC</a> carries a compressed offline copy of Wikipedia, providing access to millions of articles without internet connectivity.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/zac/">ZAC</a></h2>
-      <p><strong>ZAC</strong> (Zombie Apocalypse Computer aka Zero-Infrastructure Autonomous Computer) - A resilient, off-grid computing system designed to survive and operate during catastrophic infrastructure collapse. Built with longevity, repairability, and energy independence as core principles.</p>
+      <p>Zombie Apocalypse Computer aka Zero-Infrastructure Autonomous Computer</p>
+<p>A resilient, off-grid computing system designed to survive and operate during catastrophic infrastructure collapse. Built with longevity, repairability, and energy independence as core principles.</p>
 <p>ZAC runs <a href="/glossary/zacos">ZACOS</a>.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/zaclog/">ZACLOG</a></h2>
-      <p><strong>ZACLOG</strong> - The build series documenting the <a href="/glossary/zac">ZAC</a> project from concept to field-ready system. Each entry covers a specific aspect of the build: hardware assembly, software configuration, testing, and deployment.</p>
+      <p>The build series documenting the <a href="/glossary/zac">ZAC</a> project from concept to field-ready system. Each entry covers a specific aspect of the build: hardware assembly, software configuration, testing, and deployment.</p>
     </section>
   
     <section>
       <h2><a href="/glossary/zacos/">ZACOS</a></h2>
-      <p><strong>ZACOS</strong> (ZAC Operating System) - The open-source application that powers <a href="/glossary/zac">ZAC</a>. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
-<p>Old Man: The ZACOS setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> to download software packages. Knowing this is not ideal for fully-autonomous bootstrapping, we have been working on ways to distribute these files with ZACOS itself. In the meantime, if you are unable to access LIA mirrors, email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> and we&rsquo;ll find a way to get the setup packages to you.</p>
+      <p>ZAC Operating System</p>
+<p>The open-source application that powers <a href="/glossary/zac">ZAC</a>. Mother brain. Provides a unified interface for offline AI, mesh communication, radio monitoring, navigation, and environmental sensing. Built to run entirely without internet connectivity.</p>
+<p>Old Man: The ZACOS setup process currently requires access to <a href="/glossary/lazarus-internet-archive">LIA</a> in order to download software packages. Realizing this is not ideal for fully-autonomous bootstrapping, I have been working on ways to distribute these files with ZACOS itself. In the meantime, if you are unable to access LIA mirrors, email <a href="mailto:oldman@zombieapocalypse.tech">oldman@zombieapocalypse.tech</a> and I&rsquo;ll find a way to get the files to you.</p>
     </section>
   
 
