--- a/public/journal/index.html
+++ b/public/journal/index.html
@@ -33,7 +33,7 @@
     <section>
       <h2><a href="/journal/the-micro-center-at-crescent-hills/">The Micro Center at Crescent Hills</a></h2>
       <p>Jan 12</p>
-<p>If you&rsquo;re near a city, Micro Centers are good places to find computer parts. I&rsquo;ve been eyeing this place on RR patrols for a while. Tucked back in the Crescent Hills shopping center off Highway 57, seventeen miles due west of Heron Outpost, RU-20. Looks to have been totally forgotten. No signs of vandalism or destruction. Full inventory. Here I was able to acquire a Raspberry Pi 5, monitor, keyboard, and a 32GB microSD card. All brand new.</p>
+<p>If you&rsquo;re near a city, Micro Centers are good places to find computer parts. I&rsquo;ve been eyeing this place on RR patrols for a while. Tucked back in the Crescent Hills shopping center off Highway 57, seventeen miles due west of Heron Outpost, RU-20. Looks to have been totally forgotten. No signs of vandalism or destruction. Full inventory. Here I was able to acquire a Raspberry Pi 5, monitor, keyboard, and a 32GB microSD card. Brand new in box.</p>
     </section>
   
 
